<resources  xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">QuizUdacity</string>
    <string name="general_knowledge">GENERAL KNOWLEDGE QUIZ</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset</string>
    <string name="result">You scored <xliff:g id="score" example="1">%d</xliff:g> out of <xliff:g id="max_score" example="7">%d</xliff:g>! Tap RESET to try again.</string>
    <string name="question_1_text">1.Which actor plays Captain Jack Sparrow?</string>
    <string name="question_1_answer_1" translatable="false">Matt Damon</string>
    <string name="question_1_answer_2" translatable="false">Brad Pitt</string>
    <string name="question_1_answer_3" translatable="false">Johnny Depp</string>
    <string name="question_1_answer_4" translatable="false">Tom Cruise</string>

    <string name="question_2_text">2.The ceiling of the Sistine Chapel was painted by?</string>
    <string name="question_2_answer_1" translatable="false">Michelangelo</string>
    <string name="question_2_answer_2" translatable="false">Leonardo da Vinci</string>
    <string name="question_2_answer_3" translatable="false">Titian</string>
    <string name="question_2_answer_4" translatable="false">Raphael</string>

    <string name="question_3_text">3.According to the proverb, where do all roads lead to?</string>
    <string name="question_3_answer">Rome</string>
    <string name="City">City</string>

    <string name="question_4_text">4.Select the countries located in Asia:</string>
    <string name="question_4_answer_1">Lebanon</string>
    <string name="question_4_answer_2">China</string>
    <string name="question_4_answer_3">Ghana</string>
    <string name="qestion_4_answer_4">India</string>

    <string name="question_5_text">5.What falling object is said to have inspired Isaac Newton\'s theories about gravity?</string>
    <string name="question_5_answer_1">Apple</string>
    <string name="question_5_answer_2">Pineapple</string>
    <string name="question_5_answer_3">Orange</string>
    <string name="question_5_answer_4">Plum</string>

    <string name="question_6_text">6.What is the world\'s largest structure?</string>
    <string name="question_6_answer_1">Great Wall of China</string>
    <string name="question_6_answer_2">Tokyo Harbour</string>
    <string name="question_6_answer_3">The Pentagon</string>
    <string name="question_6_answer_4">Sears Tower</string>

    <string name="question_7_text">7.What does the Dell company make?</string>
    <string name="question_7_answer_1">Cars</string>
    <string name="question_7_answer_2">Drinks</string>
    <string name="question_7_answer_3">Computers</string>
    <string name="question_7_answer_4">Bikes</string>
    <string name="todo">TODO</string>

</resources>
