<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_low"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/img_height">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/default_margin"
                android:layout_marginRight="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:scaleType="centerCrop"
                android:src="@drawable/header3" android:contentDescription="@string/todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:alpha="0.8"
                android:background="@color/colorPrimary"
                android:padding="@dimen/default_margin"
                android:text="@string/general_knowledge"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/question_text_size"
                android:textStyle="bold"

                />
        </RelativeLayout>

        <android.support.v7.widget.CardView style="@style/cadru">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question"
                    android:padding="@dimen/default_margin"
                    android:text="@string/question_1_text" />

                <RadioGroup
                    android:id="@+id/rg_question_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_margin">

                    <RadioButton
                        android:id="@+id/rb_question_1_answer_1_matt_damon"
                        style="@style/answer"
                        android:text="@string/question_1_answer_1" />

                    <RadioButton
                        android:id="@+id/rb_question_1_answer_2_brad_pitt"
                        style="@style/answer"
                        android:text="@string/question_1_answer_2"
                        />

                    <RadioButton
                        android:id="@+id/rb_question_1_answer_3_johnny_depp"
                        style="@style/answer"
                        android:text="@string/question_1_answer_3" />

                    <RadioButton
                        android:id="@+id/rb_question_1_answer_4_tom_cruise"
                        style="@style/answer"
                        android:text="@string/question_1_answer_4" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView style="@style/cadru">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question"
                    android:padding="@dimen/default_margin"
                    android:text="@string/question_2_text" />

                <RadioGroup
                    android:id="@+id/rg_question_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_margin">

                    <RadioButton
                        android:id="@+id/rb_question_2_answer_1_michelangelo"
                        style="@style/answer"
                        android:text="@string/question_2_answer_1" />

                    <RadioButton
                        android:id="@+id/rb_question_2_answer_2_leonardo"
                        style="@style/answer"
                        android:text="@string/question_2_answer_2"

                        />

                    <RadioButton
                        android:id="@+id/rb_question_2_answer_3_titian"
                        style="@style/answer"
                        android:text="@string/question_2_answer_3" />

                    <RadioButton
                        android:id="@+id/rb_question_2_answer_4_raphael"
                        style="@style/answer"
                        android:text="@string/question_2_answer_4" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView style="@style/cadru">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question"
                    android:padding="@dimen/default_margin"
                    android:text="@string/question_3_text" />

                <EditText
                    android:id="@+id/et_question_3_answer_1_rome"
                    style="@style/answer"
                    android:layout_marginBottom="@dimen/one_element_top_down_margin"
                    android:layout_marginTop="@dimen/one_element_top_down_margin"
                    android:hint="@string/City"
                    android:inputType="textCapWords"
                    android:maxLength="4" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/cadru">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question"
                    android:padding="@dimen/default_margin"
                    android:text="@string/question_4_text" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/default_margin">

                    <CheckBox
                        android:id="@+id/cb_question_4_answer_1_lebanon"
                        style="@style/answer"
                        android:text="@string/question_4_answer_1" />

                    <CheckBox
                        android:id="@+id/cb_question_4_answer_2_china"
                        style="@style/answer"
                        android:text="@string/question_4_answer_2" />

                    <CheckBox
                        android:id="@+id/cb_question_4_answer_3_ghana"
                        style="@style/answer"
                        android:text="@string/question_4_answer_3" />

                    <CheckBox
                        android:id="@+id/cb_question_4_answer_4_india"
                        style="@style/answer"
                        android:text="@string/qestion_4_answer_4" />
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView style="@style/cadru">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question"
                    android:padding="@dimen/default_margin"
                    android:text="@string/question_5_text" />

                <RadioGroup
                    android:id="@+id/rg_question_5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_margin">

                    <RadioButton
                        android:id="@+id/rb_question_5_answer_1_apple"
                        style="@style/answer"
                        android:text="@string/question_5_answer_1" />

                    <RadioButton
                        android:id="@+id/rb_question_5_answer_2_pinneaple"
                        style="@style/answer"
                        android:text="@string/question_5_answer_2"

                        />

                    <RadioButton
                        android:id="@+id/rb_question_5_answer_3_orange"
                        style="@style/answer"
                        android:text="@string/question_5_answer_3" />

                    <RadioButton
                        android:id="@+id/rb_question_5_answer_4_plum"
                        style="@style/answer"
                        android:text="@string/question_5_answer_4" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/cadru">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question"
                    android:padding="@dimen/default_margin"
                    android:text="@string/question_6_text" />

                <RadioGroup
                    android:id="@+id/rg_question_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_margin">

                    <RadioButton
                        android:id="@+id/rb_question_6_answer_1_wall_of_china"
                        style="@style/answer"
                        android:text="@string/question_6_answer_1" />

                    <RadioButton
                        android:id="@+id/rb_question_6_answer_2_tokyo"
                        style="@style/answer"
                        android:text="@string/question_6_answer_2"
                        />

                    <RadioButton
                        android:id="@+id/rb_question_6_answer_3_pentagon"
                        style="@style/answer"
                        android:text="@string/question_6_answer_3" />

                    <RadioButton
                        android:id="@+id/rb_question_6_answer_4_sears"
                        style="@style/answer"
                        android:text="@string/question_6_answer_4" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView style="@style/cadru">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/question"
                    android:padding="@dimen/default_margin"
                    android:text="@string/question_7_text" />

                <RadioGroup
                    android:id="@+id/rg_question_7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/default_margin">

                    <RadioButton
                        android:id="@+id/rb_question_7_answer_1_cars"
                        style="@style/answer"
                        android:text="@string/question_7_answer_1" />

                    <RadioButton
                        android:id="@+id/rb_question_7_answer_2_drinks"
                        style="@style/answer"
                        android:text="@string/question_7_answer_2"
                        />

                    <RadioButton
                        android:id="@+id/rb_question_7_answer_3_computers"
                        style="@style/answer"
                        android:text="@string/question_7_answer_3" />

                    <RadioButton
                        android:id="@+id/rb_question_7_answer_4_bikes"
                        style="@style/answer"
                        android:text="@string/question_7_answer_4" />
                </RadioGroup>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/bt_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin"
            android:background="@color/button_background_color"
            android:text="@string/submit"
            android:textColor="@color/button_text_color"
            />

        <Button
            android:id="@+id/bt_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:background="@color/button_background_color"
            android:text="@string/reset"
            android:textColor="@color/button_text_color" />

    </LinearLayout>
</ScrollView>
